<resources>
    <string name="app_name">TransportApp</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen_text">Transportero</string>
    <string name="turn_on_internet">Turn on internet!</string>
    <string name="title_activity_main">My Requests</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_success">Login Successfull</string>
    <string name="requests_success">Load Requests Successfull</string>
    <string name="register_success">Register Successfull</string>
    <string name="change_email_success">Changed Email Successfully</string>
    <string name="change_password_success">Changed Password Successfully</string>
    <string name="update_info_success">Updated Info Successfully</string>
    <string name="added_request_success">Added Request Successfully</string>
    <string name="accepted_request_success">Accepted Request Successfully</string>
    <string name="rejected_request_success">Rejected Request Successfully</string>
    <string name="login_invalid">Invalid email or password</string>
    <string name="prompt_firstName">Firstname</string>
    <string name="prompt_lastName">Lastname</string>
    <string name="prompt_address">Address</string>
    <string name="register_error">Register error</string>
    <string name="default_authToken">default_authToken</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_add_request">Add Request</string>
    <string name="title_activity_update_info">Update Info</string>
    <string name="title_activity_change_email">Change Email</string>
    <string name="prompt_currentEmail">Current Email</string>
    <string name="prompt_newEmail">New Email</string>
    <string name="changeEmail_invalid">Change email error</string>
    <string name="prompt_oldPassword">Old Password</string>
    <string name="prompt_newPassword">New Password</string>
    <string name="prompt_repeatPassword">Repeat Password</string>
    <string name="changeEmail">Change Email</string>
    <string name="changePassword">Change Password</string>
    <string name="changePassword_invalid">Change password error</string>
    <string name="prompt_firstNameUpdate">Firstname</string>
    <string name="prompt_lastNameUpdate">Lastname</string>
    <string name="prompt_addressUpdate">Address</string>
    <string name="prompt_phoneNumberUpdate">Phone Number</string>
    <string name="updateInfo">Update Info</string>
    <string name="updateInfo_invalid">Update info error</string>
    <string name="getRequests_invalid">Get Requests error</string>
    <string name="title_activity_maps">Add Request</string>
    <string name="addRequest_invalid">Add Request error</string>
    <string name="acceptRequest_invalid">Accept Request error</string>
    <string name="rejectRequest_invalid">Reject Request error</string>
    <string name="maxPoints_warning">You can put only two locations!</string>
    <string name="addRequest_instructions">Tap the map to set the markers\nYou can set max 2 markers (start and end location)\nPress Reset to reset the markers\nPress Ok to create the request</string>
    <string name="ok">Ok</string>
</resources>
